Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-11861

Keyboard focus is wrong with QGraphicsProxyWidgets

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • None
    • 4.7.0
    • (Inactive) Maemo 5
    • None
    • scratchbox x86 and n900 (pr 1.2 with experimental qt 4.7 packages from extras-devel)
    • 1de878c6fd707dab9d8af77bf12aceaee61fd06a

    Description

      The keyboard focus is on the wrong widget besides the visual indicator is on the right one. Backspace key also works correctly but all other key events goes to the wrong widget. It's easy to reproduce:

      1 - select 1st line edit and type something;
      2 - select 2nd line edit and type something,
      3 - click the QGV area (no widgets);
      4 - repeat the process 1 and 2 and you'll get the bug

      This happens easily when using your fingers to select the widgets (as it may hit the qgv area by mistake) and easily reproducible with proxy widgets as QDeclarativeItems in QML (in this case it's even easier to reproduce, even with the stylus).

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dohollan Dominik Holland (closed Nokia identity) (Inactive)
            artsouza Artur de Souza (MoRpHeUz)
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes