Bugfix Keyboard focus on QGraphicsProxyWidgets

The focus will now be determined after a SoftKeyboardRequest, when the QGraphicProxyWidget changed the focus.
When the focus is determined the SoftwareKeyboard will be shown

Task: QTBUG-11861
Reviewed By: Ralf Engels